# ghost-engine

./: DEMO.md  FUTURE.md  LICENSE  README.md  ROADMAP.md  run_ghost.py
.github/workflows/: publish.yml
Config/: routing_weights.json  stability_thresholds.json  state_bounds.json
config/: routing_weights.json
demo/: README.md  demo_mode.py
demo/outputs/: example_trace.txt  example_trace_A.txt  example_trace_perturbed.txt  examples_trace_neutral.txt
demo/utility_vs_ghost/: README.md  demo_config.py  diff_actions.py  environment.py  ghost_layer.py  run_demo.py  utility_baseline.py  utility_with_ghost.py
docs/: README.md  architecture.md  example_flow.md  state_model.md
ghost-engine/: CHANGELOG.md  README.md  pyproject.toml
ghost-engine/docs/: testing.md
ghost-engine/docs/tests/: test_ghost_invariants.py
ghost-engine/ghost/: __init__.py  api.py  engine.py  relationships.py
ghost-engine/ghost/examples/: relationship_proof_demo.py
ghost-engine/tests/: engine_v1_tests.py  milestone_test.py  test_agent_registry.py  test_relationship_graph.py  test_relationship_interaction.py
ghost-engine/tests/integration/: test_runtime_loop.py
ghost-engine/tests/package/: test_clean_instantiation.py  test_import_no_side_effects.py
ghost-engine/tests/property/: test_actor_memory_exact.py  test_decay_monotonic.py  test_no_internal_type_leak.py  test_relationship_accumulation.py  test_threat_monotonicity.py  test_threat_never_negative.py
ghost-engine/tests/regression/: test_snapshot_json_safe.py
ghost_engine/: __init__.py
tests/: TEST.md  test_state_recovery.py
(+31 files in other folders)
