[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-engine"
version = "0.1.0"
description = "Ghost cognitive engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Shane Heckathorn" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ghost*"]
